--- a/index.styl
+++ b/index.styl
@@ -1,4 +1,4 @@
-
+@import './animations'
 @import './themes/light-scheme-theme.styl'
 @import './themes/dark-scheme-theme.styl'
 
@@ -19,5 +19,6 @@ html[data-theme="light"]
 	{root-light}
 
 
+@import './fonts/index.styl'
 @import './tags/index.styl'
 @import './form/index.styl'
