--- a/tags/index.styl
+++ b/tags/index.styl
@@ -1,1 +1,12 @@
+@import './figure'
+@import './headers'
+@import './blockquote'
+@import './fieldset'
+@import './link'
+@import './button'
 
+dfn
+	display: block
+	color: var(--extra-color)
+	font: var(--extra-font)
+	font-style: italic
