--- a/themes/light-scheme-theme.styl
+++ b/themes/light-scheme-theme.styl
@@ -1,29 +1,28 @@
 root-light =
 	--canvas-color: rgb( 255 255 255 )
-	--canvas-color-10: rgba( 255 255 255 .1 )
-	--canvas-color-30: rgba( 255 255 255 .3 )
-	--canvas-color-50: rgba( 255 255 255 .5 )
-	--canvas-color-75: rgba( 255 255 255 .75 )
 
 	--title-color: rgb( 37 40 48 )
 	--text-color: rgb( 89 89 89 )
 	--extra-color: rgb( 160 160 160 )
 
-	--link-color: rgb( 51 153 255 )
-	--active-color: rgb( 22 112 94 )
-	--hover-color: rgb( 51 179 204 )
+	--link-default-color: rgb( 51 153 255 )
+	--link-active-color: rgb( 22 112 94 )
+	--link-hover-color: rgb( 51 179 204 )
 
-	--visited-color: rgb( 5 60 60 )
+	--link-visited-color: rgb( 5 60 60 )
 
 	--focus-color: rgb( 0 119 155 )
 	--checked-color: rgb( 51 166 230)
+	--active-color: rgb( 22 112 94 )
+	--hover-color: rgb( 51 179 204 )
+	--selected-color: rgba(51, 179, 204, .3)
 
 	--border-color: rgba(0, 0, 0, .15)
+	--overlay-color: rgba(0,0,0, .01)
 
 	--placeholder-color: rgba(0, 0, 0, .35)
-	--disabled-color: rgba(0, 0, 0, .05)
-	--select-color: rgba(51, 179, 204, .3)
+	--disabled-color: rgba(0, 0, 0, .35)
 
-	--invalid-color: rgba(249 49 17, .7)
-	--info-color: rgba(47 2 101, .7)
-	--warning-color: rgba(249 166 17, .7)
+	--invalid-color: rgba(249 49 17, .6)
+	--info-color: rgba(47 51 220, .6)
+	--warning-color: rgba(249 166 17, .6)
