--- a/themes/dark-scheme-theme.styl
+++ b/themes/dark-scheme-theme.styl
@@ -1,24 +1,29 @@
 root-dark =
-	--canvas-color: rgb( 24 24 24 )
-	--canvas-color-10: rgba( 24 24 24 .1 )
-	--canvas-color-30: rgba( 24 24 24 .3 )
-	--canvas-color-50: rgba( 24 24 24 .5 )
-	--canvas-color-75: rgba( 24 24 24 .75 )
+	--canvas-color: rgb( 14 14 14 )
 
+	--text-color: lightness(rgb( 89 89 89 ), 60%)
 	--title-color: lightness(rgb( 37 40 48 ), 40%)
+	--extra-color: darken(rgb( 160 160 160 ), 60% )
 
 
-	--link-color: lightness(rgb( 51 153 255 ), 30%)
+	--link-default-color: lightness(rgb( 51 153 255 ), 30%)
+	--link-active-color: lightness(rgb( 22 112 94 ), 30%)
+	--link-hover-color: lightness(rgb(51 179 204), 30%)
+	--link-visited-color: lightness(rgb(5 60 60), 20%)
+
+	--focus-color: lightness(rgb(0 119 155), 20%)
+	--checked-color: lightness(rgb( 51 166 230), 30%)
 	--active-color: lightness(rgb( 22 112 94 ), 30%)
 	--hover-color: lightness(rgb(51 179 204), 30%)
-
-	--visited-color: lightness(rgb(5 60 60), 20%)
-
-	--focus-color: lightness(rgb(0 119 155), 30%)
-	--checked-color: lightness(rgb( 51 166 230), 30%)
+	--selected-color: lightness(rgba(51, 179, 204, .3), 30%)
 
 	--border-color: lightness(rgba(0, 0, 0, .15), 80%)
 
+	--overlay-color: rgba(255,255,255, .03)
 	--placeholder-color: lightness(rgba(0, 0, 0, .35), 80%)
 	--disabled-color: lightness(rgb( 248 248 248 ), 40%)
-	--select-color: lightness(rgba(0 89 154, .3), 50%)
+
+
+	--invalid-color: lightness(rgba(249 49 17, .6), 40%)
+	--info-color: lightness(rgba(47 51 220, .6), 60%)
+	--warning-color: lightness(rgba(249 166 17, .6), 40%)
