--- a/index.styl
+++ b/index.styl
@@ -22,3 +22,6 @@ html[data-theme="light"]
 @import './fonts/index.styl'
 @import './tags/index.styl'
 @import './form/index.styl'
+
+*
+	box-sizing: border-box
