--- a/tags/blockquote.styl
+++ b/tags/blockquote.styl
@@ -8,6 +8,8 @@ blockquote
 	border-style:  dashed
 	border-color: var(--info-color)
 	border-width: 1px 0px
+	flex-grow: 1
+	width: 100%
 	&:before
 		content: '\24d8'
 		color: var(--info-color)
