Select input form

--- a/form/index.styl
+++ b/form/index.styl
@@ -4,7 +4,7 @@ label
 	border: 1px solid var(--border-color)
 	box-sizing: border-box
 
-	& > input
+	& > input, & > select
 		border: 0px solid transparent
 		grid-area: 1/1/2/2
 		background-color: transparent
@@ -74,8 +74,15 @@ label
 
 		&[type="checkbox"],&[type="radio"]
 			justify-self: flex-start
+			& + span
+				grid-area: 1/1/2/3
+				display: inline-flex
+				flex-wrap: wrap
+				align-items: center
 		&.switcher[type="checkbox"]
 			margin: .65rem 1rem
+			& + span
+				margin: 0px 3rem
 
 input[type="number"]
 	-moz-appearance: textfield
